--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -9,12 +9,41 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div th:text="${result}"></div>
+        <div class="card mb-3" style="max-width: 740px;" th:each="image : ${images}">    
+            <div class="row justify-content-center no-gutters">
+                <div class="col-md-4 align-self-center">
+                    <img th:src="@{./images/screenshot.png}" class="card-img" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${image.name}">title</h5>
+                        <p class="card-text" th:text="${image.text}" style="max-height: 200px; overflow-y:auto;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio unde beatae maiores suscipit harum aliquid corporis inventore similique, sed temporibus doloremque labore quia eligendi iusto qui nobis aspernatur ipsa reiciendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam eaque fuga consequatur dolores amet facere expedita! Vitae consequatur dolores dicta, laboriosam quia sequi quos, nisi aperiam, voluptates debitis nesciunt hic! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut odio fuga iste quidem quam similique aperiam, provident laborum dolore. Nesciunt ipsum corporis beatae inventore optio quae aliquam ea, quod totam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium praesentium alias qui illo itaque, ipsa veniam numquam, optio minus sint, tenetur deleniti dignissimos vel amet beatae asperiores. Laboriosam, perferendis ipsa!</p>
+                        <button id="copy-button" class="btn btn-primary">Copy</button>
+                    </div>
+                </div>
             </div>
         </div>
+        <a class="btn btn-primary" role="button" th:href="@{/}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+              </svg>
+            <span>Go home</span>
+        </a>
     </div>
+    <script type="text/javascript">
+        var copyButtons = document.querySelectorAll("#copy-button");
+        var copyTextDetails = document.querySelectorAll(".card-text");
+
+        copyButtons.forEach(function(copyButton, index){
+            copyButton.addEventListener("click", () => {
+                // Не поддерживается без HTTTPS
+                navigator.clipboard.writeText(copyTextDetails[index].innerText);
+                alert("Text copied")
+            });
+        });
+
+
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 </body>
