--- a/src/main/resources/templates/pdf-converter.html
+++ b/src/main/resources/templates/pdf-converter.html
@@ -3,28 +3,17 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{/fragments/layout}">
 <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
-   </head>
+    <title>Document2</title>
+</head>
 <body>
     <div layout:fragment="content">
-        <section id="hero">
-            <div class="container">
-                <div class="row justify-content-center">
-                <div class="col-xl-7 col-lg-9 text-center">
-                    <h1>Transform image to text</h1>
-                    <h2>Optical character recognition</h2>
-                </div>
-                </div>
-            </div>
-            <div th:replace="~{fragments/converter(link='/convert')}"></div>
-        </section>
+        <div th:replace="~{fragments/converter(link='/convert-to-pdf')}"></div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" th:src="@{/js/main.js}"></script>
     </div>
-
-
 </body>
 </html>
