--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,41 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <html lang="en" xmlns:th="http://www.thymeleaf.org"     
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{/fragments/layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Result</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <script defer th:src="@{/js/bootstrap.bundle.min.js}"></script>
-</head>
 <body style="background-color: #dbdfeac0;">
-    <header th:insert="~{fragments/navigation}"></header>
-    <div class="container" style="margin-top: 65px;">
-        <a class="link-primary" th:href="@{/}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
-              </svg>
-            <span>Home</span>
-        </a>
-        <div class="card mb-3" th:each="image : ${images}">    
-            <div class="row justify-content-center no-gutters">
-                <div class="col-md-5 align-self-center">
-                    <img th:src="${image.photo}" class="card-img rounded" alt="...">
-                </div>
-                <div class="col-md-7">
-                    <div class="card-body">
-                        <h5 class="card-title" th:text="${image.name}">title</h5>
-                        <p class="card-text fs-6" th:text="${image.text}" style="max-height: 200px; overflow-y:auto;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos laudantium deserunt a. Consectetur id fuga magni, aperiam ullam unde iusto suscipit saepe aut! Perferendis exercitationem, laboriosam nisi iure repudiandae adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam enim ducimus rerum amet porro dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda numquam quibusdam atque provident aperiam ducimus adipisci, aliquid dignissimos quas molestiae excepturi fugiat illum porro in quaerat? Nulla, repudiandae veritatis! magnam molestias pariatur magni animi? Ullam eum nemo labore numquam reiciendis expedita, deserunt quo eaque.</p>
-                        <!-- <button id="copy-button" class="btn btn-primary">Copy</button> -->
+    <div layout:fragment="content">
+        <div class="container" style="margin-top: 65px;">
+            <div th:insert="~{fragments/navigation :: back-button}"></div>
+            <div class="card mb-3" th:each="image : ${images}">    
+                <div class="row justify-content-center no-gutters">
+                    <div class="col-md-5 align-self-center">
+                        <img th:src="${image.photo}" class="card-img rounded" alt="...">
+                    </div>
+                    <div class="col-md-7">
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="${image.name}">title</h5>
+                            <p class="card-text fs-6" th:text="${image.text}" style="max-height: 200px; overflow-y:auto;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos laudantium deserunt a. Consectetur id fuga magni, aperiam ullam unde iusto suscipit saepe aut! Perferendis exercitationem, laboriosam nisi iure repudiandae adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam enim ducimus rerum amet porro dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda numquam quibusdam atque provident aperiam ducimus adipisci, aliquid dignissimos quas molestiae excepturi fugiat illum porro in quaerat? Nulla, repudiandae veritatis! magnam molestias pariatur magni animi? Ullam eum nemo labore numquam reiciendis expedita, deserunt quo eaque.</p>
+                            <!-- <button id="copy-button" class="btn btn-primary">Copy</button> -->
+                        </div>
                     </div>
                 </div>
             </div>
+            <div th:replace="~{fragments/navigation :: back-button}"></div>
         </div>
-        <a class="link-primary" th:href="@{/}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
-              </svg>
-            <span>Home</span>
-        </a>
     </div>
     <script type="text/javascript" th:src="@{/js/result.js}"></script>
   </body>
