Add word convert Change list of image position

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -12,6 +12,9 @@
               <li class="nav-item px-2">
                 <a class="nav-link" th:href="@{/pdf-converter}">PDF</a>
               </li>
+              <li class="nav-item px-2">
+                <a class="nav-link" th:href="@{/word-converter}">Word</a>
+              </li>
               <li class="nav-item dropdown px-2">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Drop
