--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,12 +6,7 @@ body {
 
 #hero {
   width: 100%;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin-top: 55px;
+  height: 100vh;
 }   
 
 
@@ -23,7 +18,6 @@ body {
 }
   
 #hero h2 {
-  margin: 10px 0 0 0;
   font-size: 22px;
 }  
 
@@ -35,7 +29,6 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 10px auto;
 } 
 
 #drop-area.active {
