--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -8,6 +8,8 @@
 </head>
 <body style="background-color: #f5f5f5">
     <header th:insert="~{fragments/navigation}"></header>
-    <section layout:fragment="content"></section>
+    <section layout:fragment="content" class="mt-3"></section>
+    <footer th:insert="~{fragments/footer}"></footer>
+    <div layout:fragment="scripts"></div>
 </body>
 </html>
