--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,29 +1,24 @@
-body {
-  height: 2000px;
-}
-
+body { margin:0; }
 
 
 #hero {
   width: 100%;
   height: 100vh;
+  min-height: 600px;
+  margin-top: 20px;
 }   
 
 
 #hero h1 {
     margin: 0;
-    font-size: 46 px;
-    font-weight: 700;
-    line-height: 72px;
 }
   
-#hero h2 {
-  font-size: 22px;
-}  
 
 #drop-area {
-  height: 300px;
-  border: 3px dashed hsla(240, 1%, 30%, 0.521);
+  height: 280px;
+  border: 3px dashed hsla(240, 1%, 30%, 0.521); 
+  box-sizing: border-box; 
+  padding: 1rem;
   background-color: #FFF;
   display: flex;
   align-items: center;
@@ -36,31 +31,14 @@ body {
 }
 
 
-/* #image-list {
-  max-height: 110px;
-  overflow-y: auto;
-} */
 
-/* input[type=file]::file-selector-button {
-  visibility: hidden;
+
+#image-list {
+  height: 120px; 
+  background-color: white; 
+  overflow-x: auto;
 }
-
-input[type='file'] {
-  color: transparent !important;
-} */ 
-
-/* .img-view {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
 
 .img-view img {
   width: 80px;
 }
-
-/* #file-input {
-  height: 300px;
-  border: 1px dashed rgba(120, 16, 16, 0.4);
-} */
