--- a/src/main/resources/templates/fragments/converter.html
+++ b/src/main/resources/templates/fragments/converter.html
@@ -1,33 +1,32 @@
 <div th:fragment="converter(link)">
     <div id="ocr">
-        <div class="container p-2">
+        <div class="container">
             <div class="row justify-content-center">
-                <div class="col-8">
+                <div class="col-9 rounded" style="background-color: #FFF; padding: 15px;">
                     <form class="form-inline" th:action="${link}"  method="post" enctype="multipart/form-data">
-                        <div class="d-flex flex-row justify-content-between">
-                            <div id="drop-area" class="input-group rounded">
-                                <input id="file-input" name="files" type="file" class="form-control" accept="image/png, image/jpeg, image/jpg" multiple hidden  >                                     
-                                <div class="img-view text-center">
-                                    <img src="../static/images/upload.png" th:src="@{images/upload.png}" alt="">
-                                    <p class="fs-5">Drag & Drop <br> or <span id="browse-button" class="text-primary" role="button">click </span>to upload image</p>
-                                    <p class="fw-light">Upload .png .jpg .jpeg</p>
-                                </div>
-                            </div>
-                            <div id="image-list" class="col-md-9" style="height: 300px; background-color: white; overflow-y:scroll;" hidden>
-                                <div id="file-output"></div>
+                        <div id="drop-area" class="input-group rounded">
+                            <input id="file-input" name="files" type="file" class="form-control" accept="image/png, image/jpeg, image/jpg" multiple hidden  >                                     
+                            <div class="img-view text-center">
+                                <img th:src="@{images/upload.png}" alt="">
+                                <p class="fs-5">Drag & Drop <br> or <span id="browse-button" class="text-primary" role="button">click </span>to upload image</p>
+                                <p class="fw-light">Upload .png .jpg .jpeg</p>
                             </div>
                         </div>
-                        <label for="language">Choose language</label>
-                        <select id="language" class="form-select mb-3" aria-label="Language Select" name="lang">
-                            <option value="kir" selected>Kyrgyz</option>
-                            <option value="eng">English</option>
-                            <option value="chi-sim">Chinese</option>
-                        </select>
+                        <div id="image-list" class="d-none">
+                            <div id="file-output" class="d-flex flex-row flex-nowrap justify-content-start"></div>
+                        </div>
+                        <div class="input-group mt-2 mb-2">
+                            <label class="input-group-text" for="language">Choose language</label>
+                            <select id="language" class="form-select" aria-label="Language Select" name="lang">
+                                <option value="kir" selected>Kyrgyz</option>
+                                <option value="eng">English</option>
+                                <option value="chi-sim">Chinese</option>
+                            </select>
+                            <button id="submit-button" type="submit" class="col col-sm-3 btn btn-primary" disabled>Convert</button>
+                        </div>
+                        
                         <div id="progress-status" class="progress d-none my-2">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
-                        </div>
-                        <div class="d-grid">
-                            <button id="submit-button" type="submit" class="btn btn-primary" disabled>Convert</button>
                         </div>
                     </form>
                 </div>
