--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,11 @@
-<div th:fragment="footer"  class="container text-muted py-5">
-    <p class="float-end mb-1">
-    <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
-</div>
+
+<footer th:fragment="footer" class="py-3 bg-dark">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">About</a></li>
+    </ul>
+    <p class="text-center text-decoration-none text-white">© 2024 Company, Inc</p>
+  </footer>
