--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,28 +9,20 @@
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
    </head>
 <body>
-    <div layout:fragment="content">
-        <section id="hero">
-            <div class="container">
-                <div class="row justify-content-center">
+    <section layout:fragment="content" id="hero">
+        <div id="page-title" class="container">
+            <div class="row justify-content-center">
                 <div class="col-xl-7 col-lg-9 text-center">
                     <h1>Transform image to text</h1>
-                    <h2>Optical character recognition</h2>
-                </div>
+                    <p>Optical character recognition</p>
                 </div>
             </div>
-            <div th:replace="~{fragments/converter(link='/convert')}"></div>
-        </section>
-        <section class="album-section">
-            <div th:replace="~{fragments/album}"></div>
-        </section>
-        <div layout:fragment="scripts">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-            <script type="text/javascript" th:src="@{/js/main.js}"></script>
-            <script></script>
         </div>
-    </div>
-
-
+        <div th:replace="~{fragments/converter(link='/convert')}"></div>
+    </section>
+    <th:block layout:fragment="script">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script type="text/javascript" th:src="@{/js/main.js}"></script>
+    </th:block>
 </body>
 </html>
