--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -4,27 +4,28 @@
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="~{/fragments/layout}">
 <head>
-<body style="background-color: #dbdfeac0;">
-    <div layout:fragment="content">
-        <div class="container" style="margin-top: 65px;">
-            <div th:insert="~{fragments/navigation :: back-button}"></div>
-            <div class="card mb-3" th:each="image : ${images}">    
-                <div class="row justify-content-center no-gutters">
-                    <div class="col-md-5 align-self-center">
-                        <img th:src="${image.photo}" class="card-img rounded" alt="...">
-                    </div>
-                    <div class="col-md-7">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="${image.name}">title</h5>
-                            <p class="card-text fs-6" th:text="${image.text}" style="max-height: 200px; overflow-y:auto;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos laudantium deserunt a. Consectetur id fuga magni, aperiam ullam unde iusto suscipit saepe aut! Perferendis exercitationem, laboriosam nisi iure repudiandae adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam enim ducimus rerum amet porro dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda numquam quibusdam atque provident aperiam ducimus adipisci, aliquid dignissimos quas molestiae excepturi fugiat illum porro in quaerat? Nulla, repudiandae veritatis! magnam molestias pariatur magni animi? Ullam eum nemo labore numquam reiciendis expedita, deserunt quo eaque.</p>
-                            <!-- <button id="copy-button" class="btn btn-primary">Copy</button> -->
-                        </div>
+<body>
+    <div layout:fragment="content"  class="container mt-4" style="min-height: 100vh;">
+        <!-- <div th:insert="~{fragments/navigation :: back-button}"></div> -->
+        <h1>Result</h1>
+        <div class="card mb-3" th:each="image : ${images}">    
+            <div class="row justify-content-center no-gutters">
+                <div class="col-md-3 align-self-center">
+                    <img th:src="${image.photo}" class="card-img rounded" alt="..." style="max-height: 200px;">
+                </div>
+                <div class="col-md-7">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${image.name}">title</h5>
+                        <p class="card-text fs-6" th:text="${image.text}" style="max-height: 200px; overflow-y:auto;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos laudantium deserunt a. Consectetur id fuga magni, aperiam ullam unde iusto suscipit saepe aut! Perferendis exercitationem, laboriosam nisi iure repudiandae adipisci. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam enim ducimus rerum amet porro dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem assumenda numquam quibusdam atque provident aperiam ducimus adipisci, aliquid dignissimos quas molestiae excepturi fugiat illum porro in quaerat? Nulla, repudiandae veritatis! magnam molestias pariatur magni animi? Ullam eum nemo labore numquam reiciendis expedita, deserunt quo eaque.</p>
+                        <button id="copy-button" class="btn btn-outline-primary">Copy</button>
                     </div>
                 </div>
             </div>
-            <div th:replace="~{fragments/navigation :: back-button}"></div>
         </div>
+        <div th:replace="~{fragments/navigation :: back-button}"></div>
     </div>
-    <script type="text/javascript" th:src="@{/js/result.js}"></script>
+    <th:block layout:fragment="script">
+        <script type="text/javascript" th:src="@{/js/result.js}"></script>
+    </th:block>
   </body>
 </html>
