--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,9 +12,9 @@
     <section layout:fragment="content" id="hero">
         <div id="page-title" class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-7 col-lg-9 text-center">
-                    <h1>Transform image to text</h1>
-                    <p>Optical character recognition</p>
+                <div class="col-xl-9 text-center">
+                    <h1 th:text="#{main.title}"></h1>
+                    <p th:text="#{main.subtitle}"></p>
                 </div>
             </div>
         </div>
