--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div layout:fragment="content">
-        <div class="container">
+        <div class="container" style="height: 500px;">
             <div class="row">
-                <div class="col-md-6 mx-auto mt-3 text-center">
+                <div class="col-md-6 mx-auto mt-5 text-center">
                     <div>
                         <h1>Something went wrong! </h1>
                         <h2>Our Engineers are on it</h2>
