--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 
 <footer th:fragment="footer" class="py-3 bg-dark">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Home</a></li>
+      <li class="nav-item"><a th:href="@{/}" class="nav-link px-2 text-decoration-none text-white">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Features</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Pricing</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">FAQs</a></li>
