--- a/src/main/resources/templates/pdf-converter.html
+++ b/src/main/resources/templates/pdf-converter.html
@@ -7,21 +7,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
-    <title>Document2</title>
+    <title>Pdf converter</title>
 </head>
 <body>
-    <div layout:fragment="content">
-        <div class="container mt-5">
+    <div layout:fragment="content" id="hero">
+        <div class="container mt-4">
             <div class="row justify-content-center">
-            <div class="col-xl-7 col-lg-9 text-center">
-                <h1>Transform image to text</h1>
-                <p>Transform your image text into a beautifully crafted Microsoft Word document</p>
-            </div>
+                <div class="col-xl-9 text-center">
+                    <h2 th:text="#{main.title}"></h2>
+                    <p th:text="#{pdf.subtitle}"></p>
+                </div>
             </div>
         </div>
         <div th:replace="~{fragments/converter(link='/convert-to-pdf')}"></div>
+    </div>
+    <th:block layout:fragment="script">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" th:src="@{/js/main.js}"></script>
-    </div>
+    </th:block>
 </body>
 </html>
