--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -33,3 +33,17 @@
 .img-view img {
   width: 80px;
 }
+
+
+#loading {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 9999;
+  text-align: center;
+  padding-top: 20%;
+}
