--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,19 +13,19 @@
         <div class="row justify-content-center">
             <div class="col-8 col-md-4">
                 <img th:src="@{images/logo.png}" alt="" style="margin: 0 auto; width: 70px;">
-                <h1 class="text-center">Please Log In</h1>
-                <div class="mb-3" th:if="${param.error}">
+                <h1 class="text-center" th:text="#{login.title}">Please Log In</h1>
+                <div class="mb-3" th:if="${param.error}" th:text="#{login.error}">
                     Invalid username and password.</div>
-                <div class="mb-3" th:if="${param.logout}">
-                    You have been logged out.</div>
+                <div class="mb-3" th:if="${param.logout}" th:text="#{login.logout}">
+                    You have been logged out</div>
                 <form th:action="@{/login}" method="post">
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingInput" name="username" placeholder="Username">
-                        <label for="floatingInput">Username</label>
+                        <input type="email" class="form-control" id="floatingInput" name="username" placeholder="Username">
+                        <label for="floatingInput" th:text="#{login.email}">Username</label>
                     </div>
                     <div class="form-floating">
                         <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
-                        <label for="floatingPassword">Password</label>
+                        <label for="floatingPassword" th:text="#{login.password}">Password</label>
                     </div>
                     
                     <button type="submit" class="mt-3 w-100 btn btn-primary btn-lg">Log in</button>
