--- a/src/main/resources/templates/word-converter.html
+++ b/src/main/resources/templates/word-converter.html
@@ -15,8 +15,9 @@
         <div class="container mt-4">
             <div class="row justify-content-center">
                 <div class="col-xl-9 text-center">
-                    <h2 th:text="#{main.title}"></h2>
-                    <p th:text="#{word.subtitle}"></p>
+                    <h2 class="m-0" th:text="#{main.title}"></h2>
+                    <p class="m-0" th:text="#{word.subtitle}"></p>
+                    <p class="m-0" th:text="#{document}"></p>
                 </div>
             </div>
         </div>
