--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                         <label for="floatingPassword" th:text="#{login.password}">Password</label>
                     </div>
                     
-                    <button type="submit" class="mt-3 w-100 btn btn-primary btn-lg">Log in</button>
+                    <button type="submit" class="mt-3 w-100 btn btn-primary btn-lg" th:text="#{login}">Log in</button>
                 </form>
             </div>
         </div>
