--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,20 +11,23 @@
     <header th:insert="~{fragments/navigation}"></header>    
     <div class="container mt-5 min-vh-100">
         <div class="row justify-content-center">
-            <div class="col-8 col-md-4">
+            <div class="col-lg-5">
                 <h2 class="mb-4" th:text="#{signup.title}"></h2>
                 <form th:action="@{/register}" method="post">
                     <div class="mb-3">
                         <label for="email" class="form-label" th:text="#{login.email}">Email address</label>
                         <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" required>
                         <div id="emailHelp" class="form-text" th:text="#{signup.message}">We'll never share your email with anyone else.</div>
+                        <div th:if="${errorMessage}">
+                            <div class="form-text" th:text="#{signup.error}"></div>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label" th:text="#{login.password}">Password</label>
                         <input type="password" name="password" class="form-control" id="password" required>
                     </div>
                     <div class="d-grid">
-                        <button type="submit" class="btn btn-primary">Register</button>
+                        <button type="submit" class="btn btn-primary" th:text="#{signup.button}">Register</button>
                     </div>
                 </form>
             </div>
