Add content section

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -21,6 +21,9 @@
         </div>
         <div th:replace="~{fragments/converter(link='/convert')}"></div>
     </section>
+    <section>
+        <div th:replace="~{fragments/ocr-content}"></div>
+    </section>
     <div th:replace="~{fragments/footer}"></div>
     <script th:src="@{/js/nav.js}" ></script>
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
