--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,9 @@
 
-<footer th:fragment="footer" class="py-3 bg-dark">
+<footer th:fragment="footer" class="mt-3 py-3 bg-dark">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a th:href="@{/}" class="nav-link px-2 text-decoration-none text-white">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-decoration-none text-white">About</a></li>
+      <li class="nav-item"><a th:href="@{/}" th:text="#{main.name}" class="nav-link px-2 text-decoration-none text-white">Home</a></li>
+      <li class="nav-item"><a th:href="@{/pdf-converter}" th:text="#{image.pdf}" class="nav-link px-2 text-decoration-none text-white">Features</a></li>
+      <li class="nav-item"><a th:href="@{/word-converter}" th:text="#{image.docx}" class="nav-link px-2 text-decoration-none text-white">Pricing</a></li>
     </ul>
-    <p class="text-center text-decoration-none text-white">© 2024 Company, Inc</p>
+    <p class="text-center text-decoration-none text-white" th:text="#{dev.name}">© 2024 Arsen Baktiyarov</p>
   </footer>
