Fix download docx and pdf

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -6,7 +6,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item ps-5 px-2">
+              <li class="nav-item px-2">
                 <a class="nav-link" aria-current="page" th:href="@{/}" th:text="#{main.name}">Home</a>
               </li>
               <li class="nav-item px-2">
@@ -17,17 +17,6 @@
               </li>
               <li class="nav-item px-2" sec:authorize="isAuthenticated()">
                 <a class="nav-link" th:href="@{/files}" th:text="#{files.name}">Files</a>
-              </li>
-              
-              <li class="nav-item dropdown px-2">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Drop
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" th:href="@{?lang=en}">Ru</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
               </li>
             </ul>
             <ul class="navbar-nav">
