--- a/src/main/resources/templates/fragments/ocr-content.html
+++ b/src/main/resources/templates/fragments/ocr-content.html
@@ -1,13 +1,13 @@
     <div th:fragment="content" class="container mb-5" style="background-color: #f8f9fa;">
         <div class="row">
-            <div class="col">
+            <div class="col-sm">
                 <h3 th:text="#{content.first.title}"></h3>
                 <p th:text="#{content.first}"></p> </div>
-            <div class="col">
+            <div class="col-sm">
                 <h3 th:text="#{content.second.title}"></h3>
                 <p th:text="#{content.second}" ></p>
             </div>
-            <div class="col">
+            <div class="col-sm">
                 <h3 th:text="#{content.third.title}"></h3>
                 <p th:text="#{content.third}"></p>
             </div>
